--- a/src/app/templates/navbar/navbar.component.html
+++ b/src/app/templates/navbar/navbar.component.html
@@ -136,16 +136,15 @@
             </span>
             <span class="ks-info">
               <span class="ks-name" translate>{{'navbar.user'}}</span>
-                <!--<span class="ks-description">Premium User</span>-->
             </span>
           </a>
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="Preview">
             <a (click)="login()" class="dropdown-item" href="javascript:void(0);">
-              <span class="la la-sign-out ks-icon" aria-hidden="true"></span>
+              <span class="la la-sign-in ks-icon" aria-hidden="true"></span>
               <span translate>{{'auth-form.sign-in'}}</span>
             </a>
             <a [routerLink]="['/sign-up-route'] | localize" class="dropdown-item" href="javascript:void(0);">
-              <span class="la la-sign-out ks-icon" aria-hidden="true"></span>
+              <span class="la la-sign-in ks-icon" aria-hidden="true"></span>
               <span translate>{{'auth-form.sign-up'}}</span>
             </a>
           </div>
