--- a/src/app/pages/event/see-event/see-event.component.css
+++ b/src/app/pages/event/see-event/see-event.component.css
@@ -449,3 +449,157 @@ ngx-gallery /deep/ ngx-gallery-image {
 .ngx-gallery {
   text-align: center;
 }
+
+
+/* common */
+
+.ribbon {
+    width: 100px;
+    height: 100px;
+    overflow: hidden;
+    position: absolute;
+}
+
+.ribbon::before,
+.ribbon::after {
+    position: absolute;
+    z-index: -1;
+    content: '';
+    display: block;
+    border: 5px solid #062e56;
+}
+
+.ribbon span {
+    position: absolute;
+    display: block;
+    width: 120px;
+    padding: 10px 0;
+    background-color: var(--main-color);
+    box-shadow: 0 5px 10px rgba(0, 0, 0, .1);
+    color: #fff;
+    font: 700 14px/1 'Lato', sans-serif;
+    text-shadow: 0 1px 1px rgba(0, 0, 0, .2);
+    text-transform: uppercase;
+    text-align: center;
+}
+
+.ribbon-free {
+    width: 100px;
+    height: 100px;
+    overflow: hidden;
+    position: absolute;
+}
+
+.ribbon-free::before,
+.ribbon-free::after {
+    position: absolute;
+    z-index: -1;
+    content: '';
+    display: block;
+    border: 5px solid #065620;
+}
+
+.ribbon-free span {
+    position: absolute;
+    display: block;
+    width: 120px;
+    padding: 10px 0;
+    background-color: #0ca23e;
+    box-shadow: 0 -5px 10px rgba(0, 0, 0, .1);
+    color: #fff;
+    font: 700 14px/1 'Lato', sans-serif;
+    text-shadow: 0 1px 1px rgba(0, 0, 0, .2);
+    text-transform: uppercase;
+    text-align: center;
+}
+
+
+/* top left*/
+
+.ribbon-top-left {
+    top: -10px;
+    left: -10px;
+}
+
+.ribbon-top-left::before,
+.ribbon-top-left::after {
+    border-top-color: transparent;
+    border-left-color: transparent;
+}
+
+.ribbon-top-left::before {
+    top: 0;
+    right: 17px;
+}
+
+.ribbon-top-left::after {
+    bottom: 17px;
+    left: 0;
+}
+
+.ribbon-top-left span {
+    right: 10px;
+    top: 12px;
+    transform: rotate(-45deg);
+}
+
+
+/* top right*/
+
+.ribbon-top-right {
+    top: -10px;
+    right: -10px;
+    z-index: 1;
+}
+
+.ribbon-top-right::before,
+.ribbon-top-right::after {
+    border-top-color: transparent;
+    border-right-color: transparent;
+}
+
+.ribbon-top-right::before {
+    top: 0;
+    left: 17px;
+}
+
+.ribbon-top-right::after {
+    bottom: 17px;
+    right: 0;
+}
+
+.ribbon-top-right span {
+    left: 10px;
+    top: 12px;
+    transform: rotate(45deg);
+}
+
+/* bottom right*/
+
+.ribbon-bottom-right {
+    bottom: -10px;
+    right: -10px;
+    z-index: 1;
+}
+
+.ribbon-bottom-right::before,
+.ribbon-bottom-right::after {
+    border-bottom-color: transparent;
+    border-right-color: transparent;
+}
+
+.ribbon-bottom-right::before {
+    bottom: 0;
+    left: 17px;
+}
+
+.ribbon-bottom-right::after {
+    bottom: 73px;
+    right: 0;
+}
+
+.ribbon-bottom-right span {
+    left: 10px;
+    bottom: 12px;
+    transform: rotate(-45deg);
+}
