--- a/src/app/pages/authentication/register/register.component.html
+++ b/src/app/pages/authentication/register/register.component.html
@@ -85,17 +85,19 @@
                         <span *ngIf="aboutYourself.errors?.maxlength && aboutYourself.dirty " class="help-block form-error" translate>{{'validation.about-yourself-length'}}</span>
                     </div>
                     <!-- Privacy policy -->
-                      <div class="form-group" [ngClass]="{'has-error': !privacyPolicy.value, 'has-success': privacyPolicy.value}">
+                      <div class="form-group" [ngClass]="{'has-error': !privacyPolicyAndUseTerms.value, 'has-success': privacyPolicyAndUseTerms.value}">
                         <label  class="custom-control custom-checkbox">
                           <input type="checkbox" (change)="changePrivacyPolicy($event)" class="custom-control-input">
                           <span class="custom-control-indicator"></span>
                         </label>
-                        <span (click)="staticModalShow()" class="custom-control-description" [innerHTML]="'auth-form.accept' | translate">
+                        <span class="custom-control-description" translate>{{'auth-form.accept'}}</span>
+                        <span (click)="privacyPolicyStaticModalShow()" class='auth-link' translate>{{'auth-form.privacy-policy'}}
                         </span>
-                        <span (click)="staticModalShow()" class='auth-link' [innerHTML]="'auth-form.privacy-policy' | translate">
+                        <span class="custom-control-description" translate>{{'auth-form.and'}}</span>
+                        <span (click)="useTermsStaticModalShow()" class='auth-link' translate>{{'auth-form.use-terms'}}
                         </span>
                         <!-- Validation -->
-                        <span *ngIf="privacyPolicy.value===false" class="help-block form-error" translate>{{'validation.required'}}</span>
+                        <span *ngIf="privacyPolicyAndUseTerms.value===false" class="help-block form-error" translate>{{'validation.required'}}</span>
                       </div>
                     <div class="form-group">
                         <button [disabled]="!form.valid||submitted || !emailValid || !usernameValid" type="submit" class="btn btn-success btn-block" translate>{{'auth-form.sign-up'}}</button>
@@ -107,4 +109,4 @@
             </div>
         </div>
     </div>
-</div>  
+</div> 
