--- a/src/app/pages/authentication/activate/activate.component.html
+++ b/src/app/pages/authentication/activate/activate.component.html
@@ -2,7 +2,7 @@
     <div class="ks-page-content">
         <div class="card panel panel-default ks-light ks-panel ks-confirm ks-auth auth-card">
             <div class="card-block">
-                <img src="assets/img/logos/kulturekintzak.png" alt="kulturekintzak">
+                <img class="img-logo" src="assets/img/logos/kulturekintzak.png" alt="kulturekintzak">
                 <h1 class="ks-header" translate>{{'auth-form.activate-account-title'}}</h1>
                 <div class="ks-description" [ngClass]="messageClass">
                     {{ message }}
