--- a/src/app/pages/authentication/login/login.component.html
+++ b/src/app/pages/authentication/login/login.component.html
@@ -12,7 +12,7 @@
               <button type="button" class="btn btn-success" translate>{{'auth-form.resend-link'}}</button>
             </a>
           </div>
-          <img src="assets/img/logos/kulturekintzak.png" alt="kulturekintzak">
+          <img class="img-logo" src="assets/img/logos/kulturekintzak.png" alt="kulturekintzak">
           <h1 class="ks-header" translate>{{'auth-form.sign-in-title'}}</h1>
           <!-- Username Field -->
           <div class="form-group" [ngClass]="{'has-error': (!username.valid && username.dirty), 'has-success': (username.valid && username.dirty)}">
