--- a/src/app/pages/authentication/register/register.component.html
+++ b/src/app/pages/authentication/register/register.component.html
@@ -8,7 +8,7 @@
                     <div [ngClass]="messageClass">
                     {{message}}
                     </div>
-                    <img src="assets/img/logos/kulturekintzak.png" alt="kulturekintzak">
+                    <img class="img-logo" src="assets/img/logos/kulturekintzak.png" alt="kulturekintzak">
                     <h1 class="ks-header" translate>{{'auth-form.sign-up-title'}}</h1>
                     <!-- Name Input -->
                     <div class="form-group" [ngClass]="{'has-error': (!name.valid && name.dirty), 'has-success': name.valid}">
