--- a/src/app/pages/authentication/reset/new-password/new-password.component.html
+++ b/src/app/pages/authentication/reset/new-password/new-password.component.html
@@ -8,7 +8,7 @@
                     <div [ngClass]="messageClass">
                         {{ message }}
                     </div>
-                    <img src="assets/img/logos/kulturekintzak.png" alt="kulturekintzak">
+                    <img class="img-logo" src="assets/img/logos/kulturekintzak.png" alt="kulturekintzak">
                     <h1 *ngIf="showForm" class="ks-header" translate>{{'auth-form.new-password'}}</h1>
                     <!-- Password Input -->
                     <div *ngIf="showForm" class="form-group" [ngClass]="{'has-error': (!password.valid && password.dirty), 'has-success': (password.valid)}">
