--- a/src/app/pages/authentication/reset/reset-password/reset-password.component.html
+++ b/src/app/pages/authentication/reset/reset-password/reset-password.component.html
@@ -7,7 +7,7 @@
 					<div [ngClass]="messageClass">
 					{{ message }}
 					</div>			    
-                    <img src="assets/img/logos/kulturekintzak.png" alt="kulturekintzak">
+                    <img class="img-logo" src="assets/img/logos/kulturekintzak.png" alt="kulturekintzak">
                     <h1 class="ks-header" translate>{{'auth-form.reset-password-title'}}
                     </h1>
                      <!-- Username Field -->
