--- a/src/app/pages/authentication/resend/resend.component.html
+++ b/src/app/pages/authentication/resend/resend.component.html
@@ -8,7 +8,7 @@
                     <div [ngClass]="messageClass">
                         {{ message }}
                     </div>
-                    <img src="assets/img/logos/kulturekintzak.png" alt="kulturekintzak">
+                    <img class="img-logo" src="assets/img/logos/kulturekintzak.png" alt="kulturekintzak">
                     <h1 class="ks-header" translate>{{'auth-form.activate-account-title'}}</h1>
                     <!-- Username Field -->
                     <div class="form-group" [ngClass]="{'has-error': (!username.valid && username.dirty), 'has-success': (username.valid && username.dirty)}">
